Fix layout issues related to heading font change

--- a/app/assets/stylesheets/output_document.css.scss
+++ b/app/assets/stylesheets/output_document.css.scss
@@ -317,8 +317,8 @@ td {
   float: left;
 }
 
-.l-column-2--nudge-up {
-  margin-top: -5px;
+.l-column-2__nudge-up {
+  margin-top: -6px;
 }
 
 .l-column-1-of-3 {
